<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Settings"
    android:background="@color/backgroundColor">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Settings"
        android:background="@color/backgroundColor"
        android:id="@+id/layoutSettings">
        <include layout="@layout/header_menu"></include>

        <TextView
            android:id="@+id/textViewTitlu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/setari"
            android:textAlignment="center"
            android:textSize="35dp"
            style="@style/TextStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:text="@string/aspect"
            android:textStyle="bold"
            style="@style/TextStyle">


        </TextView>
          <View
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:layout_marginTop="0dp"
              android:layout_marginBottom="10dp"

              android:background="#636363">
          </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutSettings1"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/autour_one"
                android:text="@string/alegeTema"
                android:textSize="14sp">

            </TextView>
            <Switch
                android:id="@+id/switchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="80dp"
                android:layout_weight="2">

            </Switch>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSettings2"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="73dp">

            <TextView
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/alegeculoareText"
                android:textSize="14sp">

            </TextView>

            <LinearLayout
                android:id="@+id/layoutFormCamp5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/RadioGroupCuloare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbCuloare1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:fontFamily="monospace"
                        android:text="@string/rbCuloare1"></RadioButton>

                    <RadioButton
                        android:id="@+id/rbCuloare2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/rbCuloare2"></RadioButton>
                    <RadioButton
                        android:id="@+id/rbCuloare3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/rbCuloare3">
                        </RadioButton>
                    <RadioButton
                        android:id="@+id/rbCuloare4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/rbCuloare4"></RadioButton>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/layoutSettings4"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/oldenburg"
                android:text="@string/fontStyle"
                android:textSize="14sp">

            </TextView>
            <LinearLayout
                android:id="@+id/layoutRadioGroupFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/RadioGroupFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbFont1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/rbFont1"></RadioButton>

                    <RadioButton
                        android:id="@+id/rbFont2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/rbFont2"></RadioButton>
                    <RadioButton
                        android:id="@+id/rbFont3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="monospace"
                        android:text="@string/rbFont3">
                    </RadioButton>



                </RadioGroup>

            </LinearLayout>




        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:text="@string/Date"
            android:textStyle="bold"

            style="@style/TextStyle"></TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"

            android:background="#636363">
        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutSettings5"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="225dp"
                android:layout_height="36dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/stergeListaFacturi"
                android:textSize="14sp"></TextView>

            <CheckBox
                android:id="@+id/deleteListeFacturi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_weight="2"></CheckBox>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/layoutSettings6"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextStyle"
                android:layout_width="225dp"
                android:layout_height="36dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/stergereBazaDeDate"
                android:textSize="14sp"></TextView>

            <CheckBox
                android:id="@+id/deleteDataBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_weight="2"></CheckBox>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:layout_height="match_parent">
        <include layout="@layout/layout_menu_principal"></include>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>