<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:background="@color/backgroundColor"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/header_menu"></include>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/toolbal"
            android:background="@color/backgroundColor"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearLayoutIstoric"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                tools:context=".IstoricFacturi">

                <TextView
                    android:id="@+id/textViewTitlu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/istoric_facturi"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    style="@style/TextStyle"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="2dp"

                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text= "@string/furnizor"
                        android:textSize="15dp"


                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/denumire"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/pret"
                        android:layout_weight="1"
                        android:layout_marginLeft="25dp"
                        android:layout_height="wrap_content">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/dataEfectuarePlata"
                        android:layout_weight="1"

                        android:layout_height="wrap_content">
                    </TextView>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:background="@color/colorAccent"
                    android:layout_height="2dp">
                </View>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:id="@+id/lvFacturiPlatite"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp" />

                <Button
                    android:id="@+id/btnStat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/btnStat"
                    style="@style/ButtonStyle"/>
                <TextView
                    android:layout_marginTop="25px"
                    android:layout_width="match_parent"
                    android:textColor="#A8ABAB"
                    android:id="@+id/tvObservatie"
                    android:text="@string/OBS"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:layout_height="match_parent">
        <include layout="@layout/layout_menu_principal"></include>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>